# R-Type

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  DOCUMENTATION.md  LICENSE.md  R-TYPE.md  README.md  RFC.md  RFC_DOCUMENTATION.md  build.sh  conanfile.txt  dconfig  doxyfile  setup_conan.sh  setup_doc.sh  setup_server.bat  setup_server.sh
.github/workflows/: Linux_build_and_test.yaml  Windows_build_and_test.yaml  build_and_test.yaml  cmake_build.yaml
assets/sprites/: sprites_config.yaml
documentation/: DOCUMENTATION.md  GAME_OVERVIEW.md  HOW_TO_PLAY.md  LICENSE.md  PACKAGE_DOCUMENTATION.md  RFC_DOCUMENTATION.md  doxyfile
src/: CMakeLists.txt  main.cpp
src/Ecs/: CMakeLists.txt  Ecs.cpp  Ecs.hpp  Enum.cpp  Enum.hpp  Factory.cpp  Factory.hpp  Message.hpp  NetworkComponent.hpp  Registry.hpp  ecs.cpp  ecs.hpp
src/Ecs/Component/: AComponent.hpp  Achievement.hpp  Ammo.cpp  Ammo.hpp  Animation.hpp  CMakeLists.txt  Clickable.cpp  Clickable.hpp  Collider.hpp  CompoScene.hpp  CompoServer.hpp  Controllable.cpp  Controllable.hpp  Drawable.hpp  Hover.hpp  IComponent.hpp  Killable.cpp  Killable.hpp  Layer.cpp  Layer.hpp  Link.cpp  Link.hpp  Planet.hpp  Position.cpp  Position.hpp  Pressed.hpp  Rectangle.cpp  Rectangle.hpp  Shootable.cpp  Shootable.hpp  Shooter.hpp  SparseArray.hpp  Text.cpp  Text.hpp  TextBox.cpp  TextBox.hpp  Type.cpp  Type.hpp  Velocity.hpp  WindowSized.hpp  (+1 more)
src/Ecs/Entities/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/Ecs/Exceptions/: CMakeLists.txt  Exception.hpp  ExceptionComponentNull.hpp  ExceptionEntityLabelExists.hpp  ExceptionEntityUnobtainable.hpp  ExceptionIndexComponent.hpp  ExceptionSparseArrayUnobtainable.hpp
src/Ecs/Systems/: CMakeLists.txt  Systems.cpp  Systems.hpp  SystemsServer.cpp  SystemsServer.hpp
src/Network/: CMakeLists.txt  Connection.hpp  Message.hpp  Queue.hpp  UdpServerClient.hpp  network.cpp  network.hpp
src/Utilities/: AYamlConfig.cpp  AYamlConfig.hpp  CMakeLists.txt  IYamlConfig.hpp  LevelManager.cpp  LevelManager.hpp  MapMemberFunctionPointer.hpp  ParserUserInfo.cpp  ParserUserInfo.hpp  ParserYaml.cpp  ParserYaml.hpp  UnpackVariadic.cpp  UnpackVariadic.hpp
src/Utilities/Exceptions/: Exception.hpp  ExceptionBadYamlWord.hpp  ExceptionFileNotFound.hpp
src/client/: AYamlConfig.hpp  CMakeLists.txt  Core.cpp  Core.hpp  IYamlConfig.hpp  MapMemberFunctionPointer.hpp  ParserYaml.cpp  ParserYaml.hpp  SpritesManager.cpp  SpritesManager.hpp  UserInfo.hpp  main.cpp
src/client/Ecs/: Registry.hpp
src/client/Ecs/Component/: IComponent.hpp  Position.hpp  Shootable.cpp  Shootable.hpp  SparseArray.hpp  Velocity.hpp
src/client/Ecs/Entities/: Entity.cpp
src/client/Ecs/Exceptions/: ExceptionIndexComponent.hpp
src/client/Ecs/Systems/: Systems.cpp
src/client/Exceptions/: Exception.hpp  ExceptionBadAnyCast.hpp  ExceptionBadFileName.hpp  ExceptionBadYamlWord.hpp  ExceptionDirectoryNotFound.hpp  ExceptionFileNotFound.hpp  ExceptionNoAnimAttribute.hpp  ExceptionNoSpriteAnim.hpp  ExceptionNotANumber.hpp  ExceptionNotAnInteger.hpp  ExceptionSpriteIdDoesntExists.hpp  ExceptionSpriteIdExists.hpp  SfmlException.hpp  SfmlExceptionTexture.hpp
src/client/Network/: CMakeLists.txt  CustomClient.cpp  CustomClient.hpp  network.cpp  network.hpp  shared.hpp
src/client/Scenes/: Achievements.hpp  HowToPlay.hpp  ListRoom.hpp  Menu.hpp  ScenesInitializer.hpp  Settings.hpp  TypePseudo.hpp
src/client/Sfml/: CMakeLists.txt  Event.cpp  Event.hpp  GameLoop.cpp  GameLoop.hpp  Graphical.cpp  Graphical.hpp  SpritesManager.cpp  SpritesManager.hpp  window.cpp  window.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/Ecs/: CMakeLists.txt  Entity.cpp  Entity.hpp  ExceptionEntityLabelExists.hpp  ExceptionEntityUnobtainable.hpp  ExceptionSparseArrayUnobtainable.hpp  Registry.hpp  SparseArray.hpp  ecs.cpp  registry.hpp
src/server/Ecs/Component/: CMakeLists.txt  Collider.hpp  ComponentCollider.hpp  ComponentControllable.hpp  ComponentDrawable.hpp  ComponentKillable.hpp  ComponentPosition.cpp  ComponentPosition.hpp  ComponentVelocity.cpp  ComponentVelocity.hpp  Controllable.hpp  Drawable.hpp  Killable.hpp  Position.cpp  Position.hpp  Shootable.cpp  Shootable.hpp  Shooter.hpp  SparseArray.hpp  Velocity.cpp  Velocity.hpp
src/server/Ecs/Entities/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/server/Ecs/Exceptions/: CMakeLists.txt  Exception.hpp  ExceptionComponentNull.hpp  ExceptionEntityUnobtainable.hpp  ExceptionIndexComponent.hpp  ExceptionSparseArrayUnobtainable.hpp
src/server/Ecs/Systems/: CMakeLists.txt  Systems.cpp  Systems.hpp
src/server/Network/: CMakeLists.txt  CustomServer.cpp  CustomServer.hpp  network.cpp  network.hpp
src/server/Scenes/: Game.hpp  LobbySelector.hpp  Room.hpp  ScenesInitializer.hpp
src/server/levels/: level-1.yaml  level-2.yaml  level-3.yaml  level-4.yaml  level-5.yaml
